--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/karthik-bharadwaj-8684369/"
+  linkedin         : "karthik-bharadwaj-8684369/"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
