--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Karthik Bharadwaj"
   avatar           : "profile.png"
-  bio              : "Artificial Intelligence | Leader| Speaker"
+  bio              : "Artificial Intelligence | Strategy | Speaker"
   location         : "Singapore"
   employer         :
   pubmed           : ""
