--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Karthik Bharadwaj"
+  name             : ""
   avatar           : "profile.png"
   bio              : "Artificial Intelligence | Strategy | Speaker"
   location         : "Singapore"
