--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,9 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  
 
   - title: "Talks"
     url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
     
   - title: "Portfolio"
     url: /portfolio/
@@ -18,5 +14,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: "Contact"
     url: /markdown/
